--- a/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
+++ b/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
@@ -5,4 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Decos.AspNetCore.BackgroundTasks" Version="1.0.2" />
+    <PackageReference Include="System.Text.Json" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
