--- a/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
+++ b/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Decos.AspNetCore.BackgroundTasks" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.0" />
     <PackageReference Include="Polly" Version="7.2.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
