--- a/tests/Decos.Http.WebHooks.Tests/Decos.Http.WebHooks.Tests.csproj
+++ b/tests/Decos.Http.WebHooks.Tests/Decos.Http.WebHooks.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Decos.Http.WebHooks.EfCore\Decos.Http.WebHooks.EfCore.csproj" />
     <ProjectReference Include="..\..\src\Decos.Http.WebHooks\Decos.Http.WebHooks.csproj" />
   </ItemGroup>
 
