--- a/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
+++ b/src/Decos.Http.WebHooks/Decos.Http.WebHooks.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Authors>Decos Information Solutions</Authors>
+    <Company>Decos Information Solutions</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>Provides support for managing and invoking subscriptions for a web hook.</Description>
   </PropertyGroup>
 
   <ItemGroup>
